k8s/triton-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triton-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: triton.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: triton-server
                port:
                  number: 8000
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: triton-server
                port:
                  number: 8002
